# mimic-vpn

./: README.md  index.html  package.json  vite.config.js
.github/workflows/: release.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: leeme.txt
src-tauri/src/: lib.rs  main.rs
